app/lib/engine/crazycut_bindings_generated.dart

// AUTO-GENERATED by ffigen from engine/bindings/crazycut.h.
// Regenerate from the repository root with: bash tools/generate-bindings.sh
// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Generated bindings for CrazyCut's stable C ABI.
class CrazyCutNativeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CrazyCutNativeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CrazyCutNativeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int cc_abi_version() {
    return _cc_abi_version();
  }

  late final _cc_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('cc_abi_version');
  late final _cc_abi_version = _cc_abi_versionPtr.asFunction<int Function()>();

  void cc_buffer_free(ffi.Pointer<ffi.Uint8> buffer) {
    return _cc_buffer_free(buffer);
  }

  late final _cc_buffer_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
        'cc_buffer_free',
      );
  late final _cc_buffer_free = _cc_buffer_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  int cc_effect_catalog(
    ffi.Pointer<cc_engine> engine,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) {
    return _cc_effect_catalog(engine, out_json);
  }

  late final _cc_effect_catalogPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<cc_engine>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('cc_effect_catalog');
  late final _cc_effect_catalog = _cc_effect_catalogPtr
      .asFunction<
        int Function(ffi.Pointer<cc_engine>, ffi.Pointer<ffi.Pointer<ffi.Char>>)
      >();

  ffi.Pointer<cc_engine> cc_engine_create() {
    return _cc_engine_create();
  }

  late final _cc_engine_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cc_engine> Function()>>(
        'cc_engine_create',
      );
  late final _cc_engine_create = _cc_engine_createPtr
      .asFunction<ffi.Pointer<cc_engine> Function()>();

  void cc_engine_destroy(ffi.Pointer<cc_engine> engine) {
    return _cc_engine_destroy(engine);
  }

  late final _cc_engine_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cc_engine>)>>(
        'cc_engine_destroy',
      );
  late final _cc_engine_destroy = _cc_engine_destroyPtr
      .asFunction<void Function(ffi.Pointer<cc_engine>)>();

  int cc_evaluate_parameter(
    ffi.Pointer<ffi.Char> utf8_parameter_json,
    int time_num,
    int time_den,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_value_json,
  ) {
    return _cc_evaluate_parameter(
      utf8_parameter_json,
      time_num,
      time_den,
      out_value_json,
    );
  }

  late final _cc_evaluate_parameterPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('cc_evaluate_parameter');
  late final _cc_evaluate_parameter = _cc_evaluate_parameterPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  int cc_extract_frame_rgba(
    ffi.Pointer<cc_engine> engine,
    ffi.Pointer<ffi.Char> utf8_path,
    double seconds,
    int width,
    ffi.Pointer<ffi.Int32> out_w,
    ffi.Pointer<ffi.Int32> out_h,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_rgba,
  ) {
    return _cc_extract_frame_rgba(
      engine,
      utf8_path,
      seconds,
      width,
      out_w,
      out_h,
      out_rgba,
    );
  }

  late final _cc_extract_frame_rgbaPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<cc_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Double,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          )
        >
      >('cc_extract_frame_rgba');
  late final _cc_extract_frame_rgba = _cc_extract_frame_rgbaPtr
      .asFunction<
        int Function(
          ffi.Pointer<cc_engine>,
          ffi.Pointer<ffi.Char>,
          double,
          int,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
        )
      >();

  int cc_extract_thumbnail(
    ffi.Pointer<cc_engine> engine,
    ffi.Pointer<ffi.Char> utf8_path,
    double seconds,
    int width,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_jpeg,
    ffi.Pointer<ffi.Int32> out_len,
  ) {
    return _cc_extract_thumbnail(
      engine,
      utf8_path,
      seconds,
      width,
      out_jpeg,
      out_len,
    );
  }

  late final _cc_extract_thumbnailPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<cc_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Double,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('cc_extract_thumbnail');
  late final _cc_extract_thumbnail = _cc_extract_thumbnailPtr
      .asFunction<
        int Function(
          ffi.Pointer<cc_engine>,
          ffi.Pointer<ffi.Char>,
          double,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  int cc_extract_waveform(
    ffi.Pointer<cc_engine> engine,
    ffi.Pointer<ffi.Char> utf8_path,
    int peaks_per_second,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) {
    return _cc_extract_waveform(engine, utf8_path, peaks_per_second, out_json);
  }

  late final _cc_extract_waveformPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<cc_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('cc_extract_waveform');
  late final _cc_extract_waveform = _cc_extract_waveformPtr
      .asFunction<
        int Function(
          ffi.Pointer<cc_engine>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  int cc_hash_file(
    ffi.Pointer<cc_engine> engine,
    ffi.Pointer<ffi.Char> utf8_path,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_hash,
  ) {
    return _cc_hash_file(engine, utf8_path, out_hash);
  }

  late final _cc_hash_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<cc_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('cc_hash_file');
  late final _cc_hash_file = _cc_hash_filePtr
      .asFunction<
        int Function(
          ffi.Pointer<cc_engine>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  ffi.Pointer<ffi.Char> cc_last_error() {
    return _cc_last_error();
  }

  late final _cc_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'cc_last_error',
      );
  late final _cc_last_error = _cc_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<cc_playback> cc_playback_create(ffi.Pointer<ffi.Char> utf8_path) {
    return _cc_playback_create(utf8_path);
  }

  late final _cc_playback_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<cc_playback> Function(ffi.Pointer<ffi.Char>)
        >
      >('cc_playback_create');
  late final _cc_playback_create = _cc_playback_createPtr
      .asFunction<ffi.Pointer<cc_playback> Function(ffi.Pointer<ffi.Char>)>();

  void cc_playback_destroy(ffi.Pointer<cc_playback> playback) {
    return _cc_playback_destroy(playback);
  }

  late final _cc_playback_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cc_playback>)>>(
        'cc_playback_destroy',
      );
  late final _cc_playback_destroy = _cc_playback_destroyPtr
      .asFunction<void Function(ffi.Pointer<cc_playback>)>();

  double cc_playback_duration(ffi.Pointer<cc_playback> playback) {
    return _cc_playback_duration(playback);
  }

  late final _cc_playback_durationPtr =
      _lookup<
        ffi.NativeFunction<ffi.Double Function(ffi.Pointer<cc_playback>)>
      >('cc_playback_duration');
  late final _cc_playback_duration = _cc_playback_durationPtr
      .asFunction<double Function(ffi.Pointer<cc_playback>)>();

  double cc_playback_fps(ffi.Pointer<cc_playback> playback) {
    return _cc_playback_fps(playback);
  }

  late final _cc_playback_fpsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Double Function(ffi.Pointer<cc_playback>)>
      >('cc_playback_fps');
  late final _cc_playback_fps = _cc_playback_fpsPtr
      .asFunction<double Function(ffi.Pointer<cc_playback>)>();

  int cc_playback_is_playing(ffi.Pointer<cc_playback> playback) {
    return _cc_playback_is_playing(playback);
  }

  late final _cc_playback_is_playingPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<cc_playback>)>>(
        'cc_playback_is_playing',
      );
  late final _cc_playback_is_playing = _cc_playback_is_playingPtr
      .asFunction<int Function(ffi.Pointer<cc_playback>)>();

  ffi.Pointer<ffi.Uint8> cc_playback_lock_frame(
    ffi.Pointer<cc_playback> playback,
    ffi.Pointer<ffi.Int32> out_w,
    ffi.Pointer<ffi.Int32> out_h,
  ) {
    return _cc_playback_lock_frame(playback, out_w, out_h);
  }

  late final _cc_playback_lock_framePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
            ffi.Pointer<cc_playback>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('cc_playback_lock_frame');
  late final _cc_playback_lock_frame = _cc_playback_lock_framePtr
      .asFunction<
        ffi.Pointer<ffi.Uint8> Function(
          ffi.Pointer<cc_playback>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  void cc_playback_pause(ffi.Pointer<cc_playback> playback) {
    return _cc_playback_pause(playback);
  }

  late final _cc_playback_pausePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cc_playback>)>>(
        'cc_playback_pause',
      );
  late final _cc_playback_pause = _cc_playback_pausePtr
      .asFunction<void Function(ffi.Pointer<cc_playback>)>();

  double cc_playback_position(ffi.Pointer<cc_playback> playback) {
    return _cc_playback_position(playback);
  }

  late final _cc_playback_positionPtr =
      _lookup<
        ffi.NativeFunction<ffi.Double Function(ffi.Pointer<cc_playback>)>
      >('cc_playback_position');
  late final _cc_playback_position = _cc_playback_positionPtr
      .asFunction<double Function(ffi.Pointer<cc_playback>)>();

  int cc_playback_reached_end(ffi.Pointer<cc_playback> playback) {
    return _cc_playback_reached_end(playback);
  }

  late final _cc_playback_reached_endPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<cc_playback>)>>(
        'cc_playback_reached_end',
      );
  late final _cc_playback_reached_end = _cc_playback_reached_endPtr
      .asFunction<int Function(ffi.Pointer<cc_playback>)>();

  void cc_playback_resume(ffi.Pointer<cc_playback> playback) {
    return _cc_playback_resume(playback);
  }

  late final _cc_playback_resumePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cc_playback>)>>(
        'cc_playback_resume',
      );
  late final _cc_playback_resume = _cc_playback_resumePtr
      .asFunction<void Function(ffi.Pointer<cc_playback>)>();

  int cc_playback_seek(ffi.Pointer<cc_playback> playback, double seconds) {
    return _cc_playback_seek(playback, seconds);
  }

  late final _cc_playback_seekPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<cc_playback>, ffi.Double)
        >
      >('cc_playback_seek');
  late final _cc_playback_seek = _cc_playback_seekPtr
      .asFunction<int Function(ffi.Pointer<cc_playback>, double)>();

  int cc_playback_start(ffi.Pointer<cc_playback> playback) {
    return _cc_playback_start(playback);
  }

  late final _cc_playback_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<cc_playback>)>>(
        'cc_playback_start',
      );
  late final _cc_playback_start = _cc_playback_startPtr
      .asFunction<int Function(ffi.Pointer<cc_playback>)>();

  void cc_playback_unlock_frame(ffi.Pointer<cc_playback> playback) {
    return _cc_playback_unlock_frame(playback);
  }

  late final _cc_playback_unlock_framePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cc_playback>)>>(
        'cc_playback_unlock_frame',
      );
  late final _cc_playback_unlock_frame = _cc_playback_unlock_framePtr
      .asFunction<void Function(ffi.Pointer<cc_playback>)>();

  int cc_probe_file(
    ffi.Pointer<cc_engine> engine,
    ffi.Pointer<ffi.Char> utf8_path,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) {
    return _cc_probe_file(engine, utf8_path, out_json);
  }

  late final _cc_probe_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<cc_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('cc_probe_file');
  late final _cc_probe_file = _cc_probe_filePtr
      .asFunction<
        int Function(
          ffi.Pointer<cc_engine>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  double cc_project_duration(ffi.Pointer<cc_engine> engine) {
    return _cc_project_duration(engine);
  }

  late final _cc_project_durationPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<cc_engine>)>>(
        'cc_project_duration',
      );
  late final _cc_project_duration = _cc_project_durationPtr
      .asFunction<double Function(ffi.Pointer<cc_engine>)>();

  int cc_project_get_snapshot(
    ffi.Pointer<cc_engine> engine,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) {
    return _cc_project_get_snapshot(engine, out_json);
  }

  late final _cc_project_get_snapshotPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<cc_engine>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('cc_project_get_snapshot');
  late final _cc_project_get_snapshot = _cc_project_get_snapshotPtr
      .asFunction<
        int Function(ffi.Pointer<cc_engine>, ffi.Pointer<ffi.Pointer<ffi.Char>>)
      >();

  int cc_project_set_snapshot(
    ffi.Pointer<cc_engine> engine,
    ffi.Pointer<ffi.Char> utf8_json,
    int repair_invalid,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_report_json,
  ) {
    return _cc_project_set_snapshot(
      engine,
      utf8_json,
      repair_invalid,
      out_report_json,
    );
  }

  late final _cc_project_set_snapshotPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<cc_engine>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('cc_project_set_snapshot');
  late final _cc_project_set_snapshot = _cc_project_set_snapshotPtr
      .asFunction<
        int Function(
          ffi.Pointer<cc_engine>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  int cc_render_frame_rgba(
    ffi.Pointer<cc_engine> engine,
    int time_num,
    int time_den,
    int width,
    int height,
    int media_count,
    ffi.Pointer<ffi.Pointer<ffi.Char>> utf8_keys,
    ffi.Pointer<ffi.Pointer<ffi.Char>> utf8_paths,
    int texture_count,
    ffi.Pointer<ffi.Pointer<ffi.Char>> texture_keys,
    ffi.Pointer<cc_rgba_texture> textures,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_rgba,
  ) {
    return _cc_render_frame_rgba(
      engine,
      time_num,
      time_den,
      width,
      height,
      media_count,
      utf8_keys,
      utf8_paths,
      texture_count,
      texture_keys,
      textures,
      out_rgba,
    );
  }

  late final _cc_render_frame_rgbaPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<cc_engine>,
            ffi.Int64,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Int32,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<cc_rgba_texture>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          )
        >
      >('cc_render_frame_rgba');
  late final _cc_render_frame_rgba = _cc_render_frame_rgbaPtr
      .asFunction<
        int Function(
          ffi.Pointer<cc_engine>,
          int,
          int,
          int,
          int,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<cc_rgba_texture>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
        )
      >();
}

const int CC_ABI_VERSION = 2;

final class cc_engine extends ffi.Opaque {}

final class cc_playback extends ffi.Opaque {}

final class cc_rgba_texture extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> bytes;

  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  static ffi.Pointer<cc_rgba_texture> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Uint8> bytes,
    required int width,
    required int height,
  }) => $allocator<cc_rgba_texture>()
    ..ref.bytes = bytes
    ..ref.width = width
    ..ref.height = height;
}
